--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-double-marquee": "^1.1.0",
     "react-helmet": "^6.1.0",
